--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,8 +394,8 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 10,
-			day: 30,
+			patch: 11,
+			day: 31,
 			month: 10,
 			year: 2019,
 			full: function()
@@ -8004,7 +8004,7 @@ module.iconcontainer = null;
 // load panel arrangement data from local storage
 function loadPanelData(title)
 {
-	let str = localStorage.getItem("tgui_panels");
+	let str = localStorage.getItem("tgui.panels");
 	if (str)
 	{
 		let paneldata = JSON.parse(str);
@@ -8030,7 +8030,7 @@ function savePanelData()
 		d.dockedheight = p.dockedheight;
 		paneldata[p.title] = d;
 	}
-	localStorage.setItem("tgui_panels", JSON.stringify(paneldata));
+	localStorage.setItem("tgui.panels", JSON.stringify(paneldata));
 }
 
 module.preparePanels = function(panelcontainer, iconcontainer)
@@ -8136,8 +8136,8 @@ function arrange()
 		p.onArrange();
 	}
 
-	arrangeDocked(module.panels_left, 0, w60, h);
-	arrangeDocked(module.panels_right, w60, w40, h);
+	arrangeDocked(module.panels_left, 0, (module.panels_right.length > 0) ? w60 : w, h);
+	arrangeDocked(module.panels_right, (module.panels_left.length > 0) ? w60 : 0, (module.panels_left.length > 0) ? w40 : w, h);
 
 	savePanelData();
 }
@@ -9497,7 +9497,7 @@ let cmd_load = function()
 
 				module.editor_title.innerHTML = "editor &mdash; " + filename;
 				module.document.filename = filename;
-				module.sourcecode.setValue(localStorage.getItem("tscript_code_" + filename));
+				module.sourcecode.setValue(localStorage.getItem("tscript.code." + filename));
 				module.sourcecode.getDoc().setCursor({line: 0, ch: 0}, );
 				module.sourcecode.getDoc().clearHistory();
 				module.document.dirty = false;
@@ -9515,7 +9515,7 @@ let cmd_save = function()
 		return;
 	}
 
-	localStorage.setItem("tscript_code_" + module.document.filename, module.sourcecode.getValue());
+	localStorage.setItem("tscript.code." + module.document.filename, module.sourcecode.getValue());
 	module.document.dirty = false;
 }
 
@@ -9911,6 +9911,7 @@ function configDlg()
 		});
 	close.addEventListener("click", function(event)
 			{
+				saveConfig();
 				tgui.stopModal();
 				event.preventDefault();
 				event.stopPropagation();
@@ -9938,7 +9939,7 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 	let files = [];
 	for (let key in localStorage)
 	{
-		if (key.substr(0, 13) == "tscript_code_") files.push(key.substr(13));
+		if (key.substr(0, 13) == "tscript.code.") files.push(key.substr(13));
 	}
 	files.sort();
 
@@ -10011,7 +10012,7 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 					{
 						if (confirm("Delete file \"" + fn + "\"\nAre you sure?"))
 						{
-							delete localStorage.removeItem("tscript_code_" + fn);
+							delete localStorage.removeItem("tscript.code." + fn);
 							files.splice(index, 1);
 							list.remove(index);
 						}
@@ -10236,10 +10237,7 @@ module.create = function()
 			"state": "left",
 			"fallbackState": "float",
 			"dockedheight": 600,
-			"onArrange": function()
-			{
-				if (module.sourcecode) module.sourcecode.refresh();
-			},
+			"onArrange": function() { if (module.sourcecode) module.sourcecode.refresh(); },
 		});
 	panel_editor.textarea = tgui.createElement({"type": "textarea", "parent": panel_editor.content, "classname": "ide ide-sourcecode"});
 	module.sourcecode = CodeMirror.fromTextArea(panel_editor.textarea, {
