--- a/distribution/index.html
+++ b/distribution/index.html
@@ -1811,9 +1811,13 @@ let core = {
 			"prompt": function(text) {
 				let s = module.toString.call(this, text);
 				let ret = null;
-				if (! this.service.documentation_mode && this.service.prompt) ret = this.service.prompt(s);
-				if (ret === null) ret = "";
-				return {"type": this.program.types[module.typeid_string], "value": {"b": ret}};
+				if (! this.service.documentation_mode && this.service.prompt)
+				{
+					ret = this.service.prompt(s);
+					if (ret === null) return {"type": this.program.types[module.typeid_null], "value": {"b": null}};
+					else return {"type": this.program.types[module.typeid_string], "value": {"b": ret}};
+				}
+				else return {"type": this.program.types[module.typeid_string], "value": {"b": ""}};
 			},
 			"wait": function(milliseconds) {
 				if (! module.isNumeric(milliseconds.type)) this.error("/argument-mismatch/am-1", ["milliseconds", "wait", "numeric argument", module.displayname(arg.type)]);
