bug fix for expressions in parentheses

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,9 +394,9 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 16,
-			day: 12,
-			month: 11,
+			patch: 17,
+			day: 3,
+			month: 12,
 			year: 2019,
 			full: function()
 					{
@@ -8926,7 +8926,7 @@ function programinfo(value, node_id)
 
 		let pe = value;
 		if (pe.petype == "expression") pe = pe.sub;
-		else if (pe.petype == "group") pe = pe.sub;
+		while (pe.petype == "group") pe = pe.sub;
 
 		ret.element = document.createElement("div");
 		let s = "";
@@ -9341,7 +9341,7 @@ module.prepare_run = function()
 
 	if (program)
 	{
-// console.log(program);
+//console.log(program);
 		module.interpreter = new TScript.Interpreter(program);
 		module.interpreter.service.documentation_mode = false;
 		module.interpreter.service.print = (function(msg) { module.addMessage("print", msg); });
