--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,8 +394,8 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 17,
-			day: 3,
+			patch: 18,
+			day: 10,
 			month: 12,
 			year: 2019,
 			full: function()
@@ -1063,6 +1063,8 @@ let errors = {
 		"se-79": "syntax error in return; a constructor does not return a value",
 		"se-80": "syntax error in return; the program does not return a value",
 		"se-81": "syntax error in return; semicolon ';' expected",
+		"se-81b": "syntax error in break; semicolon ';' expected",
+		"se-81c": "syntax error in continue; semicolon ';' expected",
 		"se-82": "syntax error in try-catch statement: 'catch' expected",
 		"se-84": "syntax error in try-catch statement: 'var' expected after 'catch'",
 		"se-85": "syntax error in try-catch statement: identifier expected after 'var'",
@@ -6136,6 +6138,10 @@ function parse_break(state, parent)
 		p = p.parent;
 	}
 
+	// parse the closing semicolon
+	token = module.get_token(state);
+	if (token.type != "delimiter" || token.value != ';') state.error("/syntax/se-81b");
+
 	// create the break object
 	return {
 			"petype": "continue",
@@ -6178,6 +6184,10 @@ function parse_continue(state, parent)
 		if (p.petype.indexOf("loop") >= 0) break;
 		p = p.parent;
 	}
+
+	// parse the closing semicolon
+	token = module.get_token(state);
+	if (token.type != "delimiter" || token.value != ';') state.error("/syntax/se-81c");
 
 	// create the continue object
 	return {
@@ -17919,6 +17929,22 @@ if (doc) doc.children.push({
 			A <a href="#/language/statements/return">return</a> statement ends with
 			a semicolon. The error message indicates that this is not the case.
 			The most probably reason is that the return expression is broken.
+			</p>
+		`,
+		"children": []},
+		{"id": "se-81b",
+		"content": `
+			<p>
+			A <a href="#/language/statements/break-continue">break</a> statement ends with
+			a semicolon. The error message indicates that this is not the case.
+			</p>
+		`,
+		"children": []},
+		{"id": "se-81c",
+		"content": `
+			<p>
+			A <a href="#/language/statements/break-continue">continue</a> statement ends with
+			a semicolon. The error message indicates that this is not the case.
 			</p>
 		`,
 		"children": []},
