--- a/distribution/index.html
+++ b/distribution/index.html
@@ -7207,7 +7207,7 @@ module.Interpreter = function(program)
 				"variables": []             // array, global variables
 			}];
 		this.status = "running";
-		if (this.service.statechanged) this.service.statechanged(true);
+		if (this.service.statechanged) this.service.statechanged(false);
 	};
 
 	// start or continue running the program in the background
@@ -9422,7 +9422,7 @@ module.prepare_run = function()
 		}
 	}
 
-	updateControls();
+//	updateControls();
 };
 
 let cmd_reset = function()
