fixed issue #14, documentation freezing

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -7176,7 +7176,7 @@ module.Interpreter = function(program)
 			let start = (new Date()).getTime();
 			while (this.background && (new Date()).getTime() - start < 14 && this.status == "running")
 			{
-				this.step();
+				this.exec_step();
 
 				if (this.halt)
 				{
@@ -7311,7 +7311,7 @@ module.Interpreter = function(program)
 	// non-trivial command. All further steps execute one command and
 	// then move the instruction pointer to the next non-trivial
 	// command.
-	this.step = function()
+	this.exec_step = function()
 	{
 		if (this.status == "waiting")
 		{
@@ -7341,7 +7341,7 @@ module.Interpreter = function(program)
 			{
 				// execute the current program element, and demand that it "did something"
 				let done = pe.step.call(this);
-				module.assert(done, "[Interpreter.step] 'done' expected");
+				module.assert(done, "[Interpreter.exec_step] 'done' expected");
 
 				// progress the instruction pointer
 				this.stepcounter++;
@@ -7360,7 +7360,7 @@ module.Interpreter = function(program)
 
 				// execute the current program element
 				done = pe.step.call(this);
-				module.assert(! done, "[Interpreter.step] 'not done' expected");
+				module.assert(! done, "[Interpreter.exec_step] 'not done' expected");
 
 				// progress the instruction pointer
 				progress.call(this);
@@ -11186,7 +11186,8 @@ function checkCode(code)
 	interpreter.reset();
 	interpreter.service.message = function(msg) { throw msg; }
 	interpreter.service.documentation_mode = true;
-	while (interpreter.status != "finished") interpreter.step_into();
+	while (interpreter.status == "running" || interpreter.status == "waiting") interpreter.exec_step();
+	if (interpreter.status != "finished") alert("code sample failed to run:\n" + code);
 }
 
 // This function returns an altered version of the pseudo-html #content
